# sally

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  COPYING  README.md  index.html  params.json
src/: CMakeLists.txt  sal2.cpp  sally.cpp
src/ai/: CMakeLists.txt  ai.cpp  ai.h  ai_list.h  analyzer.cpp  analyzer.h  analyzer_list.h  factory.cpp  factory.h
src/ai/crab/: crab.cpp  crab.h  crab_info.h
src/ai/interval/: interval_analyzer.cpp  interval_analyzer.h  interval_analyzer_info.h
src/command/: CMakeLists.txt  assume.cpp  assume.h  checksat.cpp  checksat.h  command.cpp  command.h  declare_state_type.cpp  declare_state_type.h  define_states.cpp  define_states.h  define_transition.cpp  define_transition.h  define_transition_system.cpp  define_transition_system.h  generalize.cpp  generalize.h  interpolate.cpp  interpolate.h  query.cpp  query.h  sequence.cpp  sequence.h
src/command/transforms/: add_missing_next.cpp  add_missing_next.h  expand_arrays.cpp  expand_arrays.h  inlining.cpp  inlining.h  promote_nonstate_to_state.cpp  promote_nonstate_to_state.h  remove_arrays.cpp  remove_arrays.h  remove_enum_types.cpp  remove_enum_types.h  remove_quantifiers.cpp  remove_quantifiers.h  remove_subtypes.cpp  remove_subtypes.h  term_utils.h  transform.h  transforms.cpp  transforms.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h  engine_list.h  engines_list.h  factory.cpp  factory.h
src/engine/bmc/: bmc_engine.cpp  bmc_engine.h  bmc_engine_info.h
src/engine/ic3/: cex_manager.cpp  cex_manager.h  ic3_engine.cpp  ic3_engine.h  ic3_engine_info.h  induction_obligation.cpp  induction_obligation.h  reachability.cpp  reachability.h  reachable_states.cpp  reachable_states.h  solvers.cpp  solvers.h
src/engine/kind/: kind_engine.cpp  kind_engine.h  kind_engine_info.h
src/engine/pdkind/: cex_manager.cpp  cex_manager.h  induction_obligation.cpp  induction_obligation.h  pdkind_engine.cpp  pdkind_engine.h  pdkind_engine_info.h  reachability.cpp  reachability.h  solvers.cpp  solvers.h
src/engine/simulator/: simulator.cpp  simulator.h  simulator_info.h
src/engine/translator/: translator.cpp  translator.h  translator_info.h
src/expr/: CMakeLists.txt  algebraic_number.cpp  algebraic_number.h  array.cpp  array.h  bitvector.cpp  bitvector.h  enum_value.h  gc_participant.cpp  gc_participant.h  gc_relocator.cpp  gc_relocator.h  integer.cpp  integer.h  model.cpp  model.h  rational.cpp  rational.h  state.cpp  state.h  symbol_table.h  term.cpp  term.h  term_manager.cpp  term_manager.h  term_manager_internal.cpp  term_manager_internal.h  term_map.h  term_ops.cpp  term_ops.h  term_pool.h  term_visitor.h  type_computation_visitor.cpp  type_computation_visitor.h  value.cpp  value.h
src/parser/: CMakeLists.txt  antlr_parser.h  command.cpp  command.h  mcmt.g  mcmtParser_state.h  parser.cpp  parser.h  parser_state.cpp  parser_state.h
src/parser/aiger/: aiger.cpp  aiger.h
src/parser/btor/: .gitignore  btor.cpp  btor.g  btor.h  btor_state.cpp  btor_state.h
src/parser/btor2/: .gitignore  btor2.cpp  btor2.g  btor2.h  btor2_state.cpp  btor2_state.h
src/parser/chc/: .gitignore  chc.cpp  chc.g  chc.h  chc_state.cpp  chc_state.h  chc_system.cpp  chc_system.h
src/parser/mcmt/: .gitignore  mcmt.cpp  mcmt.g  mcmt.h  mcmt_state.cpp  mcmt_state.h
src/parser/sal/: .gitignore  README  sal.cpp  sal.g  sal.h  sal_context.cpp  sal_context.h  sal_module.cpp  sal_module.h  sal_state.cpp  sal_state.h
src/parser/smt2/: .gitignore  smt2.cpp  smt2.g  smt2.h  smt2_state.cpp  smt2_state.h
src/smt/: CMakeLists.txt  delayed_wrapper.cpp  delayed_wrapper.h  factory.cpp  factory.h  generic_solver.cpp  generic_solver.h  incremental_wrapper.cpp  incremental_wrapper.h  model.cpp  model.h  smt2_output_wrapper.cpp  smt2_output_wrapper.h  smt2_solver.cpp  smt2_solver.h  solver.cpp  solver.h  solvers_list.h  yices.h  yices2.cpp  yices2.h
src/smt/d4y2/: d4y2.cpp  d4y2.h  d4y2_info.h
src/smt/dreal/: dreal.cpp  dreal.h  dreal_info.h  dreal_internal.cpp  dreal_internal.h  dreal_term.cpp  dreal_term.h  dreal_term_cache.cpp  dreal_term_cache.h
src/smt/generic/: generic_solver.cpp  generic_solver.h  generic_solver_info.h
src/smt/mathsat5/: conflict_resolution.cpp  conflict_resolution.h  external_interpolator.cpp  external_interpolator.h  mathsat5.cpp  mathsat5.h  mathsat5_info.h  mathsat5_term_cache.cpp  mathsat5_term_cache.h  mathsat5_utils.h
src/smt/opensmt2/: opensmt2.cpp  opensmt2.h  opensmt2_info.h  opensmt2_internal.cpp  opensmt2_internal.h  opensmt2_term_cache.cpp  opensmt2_term_cache.h
src/smt/y2m5/: y2m5.cpp  y2m5.h  y2m5_info.h
src/smt/y2o2/: y2o2.cpp  y2o2.h  y2o2_info.h
src/smt/y2z3/: y2z3.cpp  y2z3.h  y2z3_info.h
src/smt/yices2/: yices2.cpp  yices2.h  yices2_info.h  yices2_internal.cpp  yices2_internal.h  yices2_term_cache.cpp  yices2_term_cache.h
src/smt/z3/: z3.cpp  z3.h  z3_common.cpp  z3_common.h  z3_info.h  z3_internal.cpp  z3_internal.h  z3_term_cache.cpp  z3_term_cache.h
src/system/: CMakeLists.txt  context.cpp  context.h  state_formula.cpp  state_formula.h  state_trace.cpp  state_trace.h  state_type.cpp  state_type.h  trace_helper.cpp  trace_helper.h  transition_formula.cpp  transition_formula.h  transition_system.cpp  transition_system.h
src/system/transforms/: add_missing_next.cpp  add_missing_next.h  expand_arrays.cpp  expand_arrays.h  inlining.cpp  inlining.h  preprocessor.cpp  preprocessor.h  promote_nonstate_to_state.cpp  promote_nonstate_to_state.h  promote_params_to_state.cpp  promote_params_to_state.h  remove_arrays.cpp  remove_arrays.h  remove_enum_types.cpp  remove_enum_types.h  remove_subtypes.cpp  remove_subtypes.h  term_utils.h  transform.cpp  transform.h  transforms.cpp  transforms.h
src/utils/: CMakeLists.txt  allocator.cpp  allocator.h  allocator_types.h  exception.cpp  exception.h  hash.h  hasher.h  module_setup.h  name_transformer.h  options.cpp  options.h  output.cpp  output.h  smart_ptr.h  statistics.cpp  statistics.h  string.cpp  string.h  symbol_table.h  trace.h
test/unit/: CMakeLists.txt  test_runner.cpp
test/unit/expr/: CMakeLists.txt  (+1 more)
(+752 files in other folders)
