add_library(command 
  assume.cpp
  command.cpp
  declare_state_type.cpp
  define_states.cpp
  define_transition.cpp
  define_transition_system.cpp
  query.cpp
  sequence.cpp
  transforms/expand_arrays.cpp
  transforms/remove_arrays.cpp
  transforms/remove_enum_types.cpp
  transforms/remove_subtypes.cpp
  transforms/transforms.cpp
  transforms/promote_nonstate_to_state.cpp
  transforms/add_missing_next.cpp
  transforms/inlining.cpp  
)

